# social-media-posts-scheduler

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.proxy.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
core/: logger.py  settings.py  urls.py
integrations/: models.py  post_management.py  urls.py  views.py
integrations/management/commands/: encryptenv.py  runposter.py
integrations/migrations/: 0001_initial.py  0002_integrationsmodel_refresh_expire.py  0003_alter_integrationsmodel_platform.py  0004_alter_integrationsmodel_platform.py
socialsched/: apps.py  forms.py  instagram_image.py  models.py  schedule_utils.py  signals.py  urls.py  views.py
socialsched/migrations/: 0001_initial.py  0002_remove_postmodel_title.py
static/: styles.css
staticfiles/: styles.css
templates/: 404.html  500.html  base.html  calendar.html  integrations.html  login.html  schedule.html  settings.html  timeline.html  user_account.html
